gccida/c2/insert_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:1777:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2188:12: error: expected expression
*( _OWORD *)&v42[v43].const_rtx = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2188:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v42[v43].const_rtx = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2189:23: error: use of undeclared identifier 'reg_eqv_elem'; did you mean 'reg_eqv_table'?
reg_eqv_table[v5] = ( reg_eqv_elem)-1LL; 
                      ^~~~~~~~~~~~
                      reg_eqv_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:293:29: note: 'reg_eqv_table' declared here
static struct reg_eqv_elem *reg_eqv_table;
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2189:19: error: assigning to 'struct reg_eqv_elem' from incompatible type 'struct reg_eqv_elem *'; dereference with *
reg_eqv_table[v5] = ( reg_eqv_elem)-1LL; 
                  ^ ~~~~~~~~~~~~~~~~~~~
                    *(                 )
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2351:21: error: use of undeclared identifier 'uid_cuid_0'
v50 = *( ( _DWORD *)uid_cuid_0 + v49[1]); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2352:51: error: use of undeclared identifier 'uid_cuid_0'
if ( ( v50 > cse_basic_block_end || *( ( _DWORD *)uid_cuid_0 + *v49) < cse_basic_block_start) 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/cse.c:2353:24: error: use of undeclared identifier 'uid_cuid_0'
&& v50 > *( ( _DWORD *)uid_cuid_0 + *( int *)( reg_n_info->data.l[first_reg] + 4)) ) 
                       ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insert_regs/src/obj/cse.o] Error 1
